objects/Person__c.object
<CustomObject>
    <description>Holds the individual Person details.</description>
    <fields>
        <fullName>Anniversary__c</fullName>
        <description>Anniversary date Of the Person.</description>
        <inlineHelpText>This field is used to send anniversary notifications.</inlineHelpText>
        <label>Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <description>Hold Birthday of the person</description>
        <inlineHelpText>This field is used to send b’day notifications</inlineHelpText>
        <label>Birthday</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Emai of person</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Holds the Gender of person</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Next_Anniversary__c</fullName>
        <description>Next Anniversary Calculation</description>
        <formula>IF(MONTH(Anniversary__c)&gt;MONTH(TODAY()),DATE(YEAR(TODAY()),MONTH(Anniversary__c),DAY(Anniversary__c)),
IF(MONTH(Anniversary__c)&lt;MONTH(TODAY()),DATE(YEAR(TODAY())+1,MONTH(Anniversary__c),DAY(Anniversary__c)),
IF(DAY(Anniversary__c) &gt;= (DAY(TODAY())),DATE(YEAR(TODAY()),MONTH(Anniversary__c),DAY(Birthday__c)),
DATE(YEAR(TODAY())+1,MONTH(Anniversary__c),DAY(Anniversary__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Birthday__c</fullName>
        <description>This will Calculate next Birthday of person</description>
        <formula>IF(MONTH( Birthday__c )&gt;MONTH(TODAY()),DATE(YEAR(TODAY()),MONTH(Birthday__c),DAY(Birthday__c)),
IF(MONTH(Birthday__c)&lt;MONTH(TODAY()),DATE(YEAR(TODAY())+1,MONTH(Birthday__c),DAY(Birthday__c)),
IF(DAY(Birthday__c) &gt;= (DAY(TODAY())),DATE(YEAR(TODAY()),MONTH(Birthday__c),DAY(Birthday__c)),
DATE(YEAR(TODAY())+1,MONTH(Birthday__c),DAY(Birthday__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next_Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Person Contact Number</description>
        <inlineHelpText>Will Hold  Phone Number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SMS_Body__c</fullName>
        <label>SMS Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_SMS_Status__c</fullName>
        <label>Send SMS Status</label>
        <picklist>
            <picklistValues>
                <fullName>Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>This_Year_Balance__c</fullName>
        <description>Hold Total balance from  the member</description>
        <inlineHelpText>This field will hold the Sum of balance from all the members. Populated via trigger</inlineHelpText>
        <label>This Year Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>This_Year_Expense__c</fullName>
        <description>Total Sum of all Expenses of whole year  From Member</description>
        <inlineHelpText>This field will hold the Sum of expenses from all the members.Populated via trigger</inlineHelpText>
        <label>This Year Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Twilio_Response__c</fullName>
        <label>Twilio Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Twitter_Screen_Name__c</fullName>
        <description>This will hold the twitter screen name</description>
        <inlineHelpText>This will hold the twitter screen name</inlineHelpText>
        <label>Twitter Screen  Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Person</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Person</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>